# hello_rust_ffi_plugin

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/: gradle.properties
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/hello_rust_ffi_plugin_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/Runner.xcodeproj/xcshareddata/xcschemes/: flavor1.xcscheme
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: hello_rust_ffi_plugin.podspec
lib/: hello_rust_ffi_plugin.dart  hello_rust_ffi_plugin_bindings_generated.dart
linux/: CMakeLists.txt
macos/: hello_rust_ffi_plugin.podspec
macos/Classes/: hello_rust_ffi_plugin.c
rust/: Cargo.toml  cargokit.yaml
rust/src/: lib.rs
src/: CMakeLists.txt  hello_rust_ffi_plugin.c
windows/: CMakeLists.txt
